fix styles on mobile

--- a/public/css/sass/_header.scss
+++ b/public/css/sass/_header.scss
@@ -45,4 +45,8 @@ body {
     align-items: center;
     font-family: 'pristina-regular','Libre Franklin', sans-serif;
     overflow: hidden;
+    @media (max-width: 1200px){
+        overflow: visible;
+
+    }
 }
